--- a/FeedParserCore.Tests/FeedParserCore.Tests.csproj
+++ b/FeedParserCore.Tests/FeedParserCore.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
     <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
+    <PackageReference Include="Appveyor.TestLogger" Version="1.1.0-post-rtm" />
   </ItemGroup>
 
   <ItemGroup>
